imports and uncomment

--- a/Sparkify.ipynb
+++ b/Sparkify.ipynb
@@ -28,6 +28,15 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
+    "from pyspark.ml.feature import StandardScaler, VectorAssembler, StringIndexer, OneHotEncoderEstimator\n",
+    "from pyspark.ml.classification import LogisticRegression, RandomForestClassifier, GBTClassifier\n",
+    "from pyspark.ml.tuning import CrossValidator, ParamGridBuilder\n",
+    "from pyspark.ml import Pipeline\n",
+    "from pyspark.mllib.evaluation import BinaryClassificationMetrics, MulticlassMetrics\n",
+    "from pyspark.ml.tuning import CrossValidator, ParamGridBuilder\n",
+    "from pyspark.ml.evaluation import BinaryClassificationEvaluator\n",
+    "\n",
+    "\n",
     "%matplotlib inline\n"
    ]
   },
@@ -270,7 +279,6 @@
    ],
    "source": [
     "# distinct counts for each variables \n",
-    "# UNCOMMENT FOR FINAL\n",
     "for var in df.columns:\n",
     "    uniques = df.select(var).dropDuplicates().count()\n",
     "    print('{} has {} unique values'.format(var, uniques)) "
@@ -340,7 +348,6 @@
    ],
    "source": [
     "# check counts of unique values for certain fields\n",
-    "# UNCOMMENT FOR FINAL\n",
     "cols = ['auth','gender','level','page']\n",
     "for var in cols: \n",
     "    df.groupBy(var).count().sort('count', ascending=False).show(30)"
@@ -348,45 +355,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 241,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+------------+\n",
+      "|                page|unique_users|\n",
+      "+--------------------+------------+\n",
+      "|    Submit Downgrade|          49|\n",
+      "|Cancellation Conf...|          52|\n",
+      "+--------------------+------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# check how many unique users saw cancellation confirmation and submit downgrade page \n",
-    "# # UNCOMMENT FOR FINAL\n",
-    "# df.groupBy(['page'])\\\n",
-    "#         .agg(countDistinct('userId'))\\\n",
-    "#         .withColumnRenamed('count(Distinct userId)', 'unique_users')\\\n",
-    "#         .where((df.page == 'Cancellation Confirmation') | (df.page == 'Submit Downgrade'))\\\n",
-    "#         .show()"
+    "\n",
+    "df.groupBy(['page'])\\\n",
+    "        .agg(countDistinct('userId'))\\\n",
+    "        .withColumnRenamed('count(Distinct userId)', 'unique_users')\\\n",
+    "        .where((df.page == 'Cancellation Confirmation') | (df.page == 'Submit Downgrade'))\\\n",
+    "        .show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 242,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+--------------------+------------+\n",
+      "|level|                page|unique_users|\n",
+      "+-----+--------------------+------------+\n",
+      "| free|Cancellation Conf...|          21|\n",
+      "| paid|Cancellation Conf...|          31|\n",
+      "| paid|    Submit Downgrade|          49|\n",
+      "+-----+--------------------+------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# check if cancellation confirmation and submit downgrade can occur for free and paid users\n",
-    "# # UNCOMMENT FOR FINAL\n",
-    "# df.groupBy(['level','page'])\\\n",
-    "#         .agg(countDistinct('userId'))\\\n",
-    "#         .withColumnRenamed('count(Distinct userId)', 'unique_users')\\\n",
-    "#         .where((df.page == 'Cancellation Confirmation') | (df.page == 'Submit Downgrade'))\\\n",
-    "#         .show()"
+    "\n",
+    "df.groupBy(['level','page'])\\\n",
+    "        .agg(countDistinct('userId'))\\\n",
+    "        .withColumnRenamed('count(Distinct userId)', 'unique_users')\\\n",
+    "        .where((df.page == 'Cancellation Confirmation') | (df.page == 'Submit Downgrade'))\\\n",
+    "        .show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 243,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------------+\n",
+      "|count(DISTINCT userId)|\n",
+      "+----------------------+\n",
+      "|                    92|\n",
+      "+----------------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# count number of unique users who saw cancellation confirmation and submit downgrade pages\n",
-    "# # UNCOMMENT FOR FINAL\n",
-    "# df.where((df.page == 'Cancellation Confirmation') | (df.page == 'Submit Downgrade'))\\\n",
-    "#     .agg(countDistinct('userId'))\\\n",
-    "#     .show()"
+    "\n",
+    "df.where((df.page == 'Cancellation Confirmation') | (df.page == 'Submit Downgrade'))\\\n",
+    "    .agg(countDistinct('userId'))\\\n",
+    "    .show()"
    ]
   },
   {
@@ -997,21 +1046,6 @@
    "source": [
     "# Modeling\n",
     "Split the full dataset into train, test, and validation sets. Test out several of the machine learning methods you learned. Evaluate the accuracy of the various models, tuning parameters as necessary. Determine your winning model based on test accuracy and report results on the validation set. Since the churned users are a fairly small subset, I suggest using F1 score as the metric to optimize."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 196,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pyspark.ml.feature import StandardScaler, VectorAssembler, StringIndexer, OneHotEncoderEstimator\n",
-    "from pyspark.ml.classification import LogisticRegression, RandomForestClassifier, GBTClassifier\n",
-    "from pyspark.ml.tuning import CrossValidator, ParamGridBuilder\n",
-    "from pyspark.ml import Pipeline\n",
-    "from pyspark.mllib.evaluation import BinaryClassificationMetrics, MulticlassMetrics\n",
-    "from pyspark.ml.tuning import CrossValidator, ParamGridBuilder\n",
-    "from pyspark.ml.evaluation import BinaryClassificationEvaluator\n"
    ]
   },
   {
