data, notebook comments

--- a/Sparkify.ipynb
+++ b/Sparkify.ipynb
@@ -509,32 +509,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+-------------+-------------------+------------+-----------------+-------------------+\n",
-      "|                page|           ts|          eventTime|cancellation|cancellationPhase|   registrationTime|\n",
-      "+--------------------+-------------+-------------------+------------+-----------------+-------------------+\n",
-      "|              Cancel|1539318918000|2018-10-12 04:35:18|           0|                1|2018-08-01 20:58:59|\n",
-      "|Cancellation Conf...|1539318918000|2018-10-12 04:35:18|           1|                1|2018-08-01 20:58:59|\n",
-      "|         Roll Advert|1539318917000|2018-10-12 04:35:17|           0|                1|2018-08-01 20:58:59|\n",
-      "|            NextSong|1539318906000|2018-10-12 04:35:06|           0|                1|2018-08-01 20:58:59|\n",
-      "|            NextSong|1539318728000|2018-10-12 04:32:08|           0|                1|2018-08-01 20:58:59|\n",
-      "|            NextSong|1539318515000|2018-10-12 04:28:35|           0|                1|2018-08-01 20:58:59|\n",
-      "|            NextSong|1539318124000|2018-10-12 04:22:04|           0|                1|2018-08-01 20:58:59|\n",
-      "|            NextSong|1539317914000|2018-10-12 04:18:34|           0|                1|2018-08-01 20:58:59|\n",
-      "|            NextSong|1539317711000|2018-10-12 04:15:11|           0|                1|2018-08-01 20:58:59|\n",
-      "|            NextSong|1539317481000|2018-10-12 04:11:21|           0|                1|2018-08-01 20:58:59|\n",
-      "|            NextSong|1539317144000|2018-10-12 04:05:44|           0|                1|2018-08-01 20:58:59|\n",
-      "+--------------------+-------------+-------------------+------------+-----------------+-------------------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# test users who saw cancellation confirmation pg \n",
     "# t = ['page','ts', 'eventTime', 'cancellation', 'cancellationPhase', 'registrationTime']\n",
@@ -1261,6 +1238,7 @@
     }
    ],
    "source": [
+    "# store dict so don't need to rerun training\n",
     "f_score_dict = {'lr_train': 0.8602941176470589,\n",
     " 'lr_test': 0.7752808988764045,\n",
     " 'rf_train': 0.9411764705882353,\n",
@@ -1338,6 +1316,7 @@
     }
    ],
    "source": [
+    "# store dict so don't need to rerun training\n",
     "f_score_dict = {'lr_train': 0.8602941176470589,\n",
     " 'lr_test': 0.7752808988764045,\n",
     " 'rf_train': 0.9411764705882353,\n",
